syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "AniSort.Server";

package anisort;

message EpisodeFileReply {
  
}