syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "Protos/jobs.proto";
import "Protos/common.proto";

option csharp_namespace = "AniSort.Server";

package anisort;

service ScheduledJobService {
  rpc ListScheduledJobs(google.protobuf.Empty) returns (stream ScheduledJob);
  
  rpc CreateScheduledJob(ScheduledJob) returns (ScheduledJob);
  
  rpc UpdateScheduledJob(ScheduledJob) returns (ScheduledJob);
}

message ScheduledJob {
  optional string scheduledJobId = 1;
  string name = 2;
  JobType type = 3;
  ScheduleType scheduleType = 4;
  google.protobuf.Struct options = 5;
  google.protobuf.Struct scheduleOptions = 6;
}

enum ScheduleType {
  Timed = 0;
  FileChange = 1;
}